# dffml

./: CHANGELOG.md
docs/contributing/gsoc/: 2021.md
model/sktime/: .coveragerc  entry_points.txt  setup.cfg
model/sktime/sktime/: foremodel.py
