[metadata]
name = sktime
version = attr: sktime.version.VERSION
description = DFFML model sktime
long_description = file: README.md
long_description_content_type = text/markdown
author = spur19
author_email = shauryapuri11@gmail.com
maintainer = spur19
maintainer_email = shauryapuri11@gmail.com
url = https://github.com/spur/sktime
license = MIT
keywords = dffml
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = False
include_package_data = True
packages = find:
entry_points = file: entry_points.txt
install_requires =
    dffml>=0.4.0
